Se agregan más modelos con sus respectivas validaciones y se cambia una parte de la tabla del holder

--- a/NuamApp/templates/holder.html
+++ b/NuamApp/templates/holder.html
@@ -40,7 +40,7 @@
                         <td>{{Email}}</td>
                         <td>{{Telefono}}</td>
                         <td>{{Corredor}}</td>
-                        <td>{{Acciones}}</td>
+                        <td><a>Visualizar</a> <a>Modificar</a> <a>Eliminar</a></td>
                     </tr>
                 </tbody>
             </table>
