--- a/NuamApp/templates/login.html
+++ b/NuamApp/templates/login.html
@@ -12,9 +12,19 @@
         <img src="{% static 'images/Nuam_logo-transparente.png' %}" alt="Nuam logo blanco" id="logo">
         <div id="linea"></div>
         <h2>Iniciar Sesión</h2>
-        <input type="email" class="campo" alt="correo" placeholder="Correo Electrónico">
-        <input type="password" class="campo" alt="contraseña" placeholder="Contraseña">
-        <a href="{% url 'holder' %}" id="boton">Ingresar</a>
+        <form method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+
+            {{ form.non_field_errors }}
+
+            {{ form.username }}
+            {{ form.username.errors }}
+
+            {{ form.password }}
+            {{ form.password.errors }}
+
+            <button type="submit" id="boton">Ingresar</button>
+        </form>
         <p alt="más opciones"><a href="{% url 'register' %}">¿No tienes cuenta? ¡Registrate!</a></p>
     </div>
 </body>
