--- a/NuamApp/templates/client_detail.html
+++ b/NuamApp/templates/client_detail.html
@@ -63,7 +63,7 @@
                             <label style="font-size: 12px; color:#777;">Año</label>
                             {{ form.año_tributario }}
                         </div>
-                        <button type="submit" id="boton" style="margin:0; width: auto; padding: 10px 15px;">Asociar</button>
+                        <button type="submit" id="boton">Asociar</button>
                     </form>
                 </div>
 
